--- a/css/zotpress.shortcode.css
+++ b/css/zotpress.shortcode.css
@@ -23,10 +23,10 @@
         float: right;
     }
     
-    div.zp-Zotpress div.zp-Entry .csl-left-margin {
+/*    div.zp-Zotpress div.zp-Entry .csl-left-margin {
         width: auto !important;
     }
-    
+*/
     div.zp-Zotpress span.zp-Loading {
         border: 1px solid #ddd;
         border-radius: 5px;
@@ -120,12 +120,13 @@
 	#zp-Browse-Collections-Select {
 		border-right: 2px solid #000;
 	}
-	.zp-List.loading {
+/*	.zp-List.loading {
 		background: transparent url('../images/loading_default.gif') no-repeat bottom center;
 		padding-bottom: 2em;
 		min-height: 3em;
 	}
-	#zp-Browse-Collections-Select.loading,
+*/
+    /*#zp-Browse-Collections-Select.loading,*/
 	.zp-List-Tags.loading {
 		background: transparent url('../images/loading_default.gif') no-repeat 0.5em center;
 		padding-left: 1.75em;
@@ -135,7 +136,7 @@
 		letter-spacing: 0.15em;
 		font-size: 0.9em;
 		font-weight: bold;
-		margin: 3em 0 0;
+		margin: 3em 0 0 0;
 		padding: 0 0 2em;
 		text-transform: uppercase;
 	}
@@ -224,6 +225,24 @@
 		border: 2px solid #000;
 		margin: 0;
 	}
+    
+    
+    div.zp-List .zp_display_progress {
+		background: transparent url('../images/loading_default.gif') no-repeat center left;
+        font-size: 0.7em;
+        line-height: 2;
+        padding-left: 3em;
+        text-transform: uppercase;
+    }
+    div.zp-List .csl-left-margin {
+        text-align: left;
+        width: 2.5em !important;
+    }
+    div.zp-List .csl-right-inline {
+        margin-left: 2.75em !important;
+    }
+    
+
 	
 	/* END OF BROWSE LIB */
 	
