--- a/css/zotpress.shortcode.css
+++ b/css/zotpress.shortcode.css
@@ -1,248 +1,232 @@
 
+/* START OF BASIC SHORTCODES */
 
-    /* START OF BASIC SHORTCODE CSS */
-    
-    div.zp-Zotpress {
-        margin: 0 0 1em;
-    }
-    
-    /* Thanks to http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
-    div.zp-Zotpress a {
-        -ms-word-break: break-all;
-        word-break: break-all;
-        word-break: break-word;
-        -webkit-hyphens: auto;
-       -moz-hyphens: auto;
-        hyphens: auto;
-    }
-    
-    div.zp-Zotpress div.zp-Entry.zp-HasImage {
-        clear: both;
-    }
-    div.zp-Zotpress div.zp-Entry-Image {
-        float: right;
-    }
-    
-/*    div.zp-Zotpress div.zp-Entry .csl-left-margin {
-        width: auto !important;
-    }
-*/
-    div.zp-Zotpress span.zp-Loading {
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        -moz-border-radius: 5px;
-        background: #f3f3f3 url('images/loading_list.gif') no-repeat top left;
-        display: block;
-        margin: auto;
-        overflow: hidden;
-        width: 33px;
-        height: 32px;
-    }
-    div.zp-Zotpress span.zp-Loading span {
-        visibility: hidden;
-    }
-    div.zp-Zotpress p.zp-NoCitations {
-        margin: 0;
-    }
-	
-	a.zp-CiteRIS,
-	a.zp-DownloadURL {
-		font-size: 0.9em;
-		text-transform: uppercase;
-	}
-	a.zp-CiteRIS:before,
-	a.zp-DownloadURL:before {
-		content: "(";
-	}
-	a.zp-CiteRIS:after,
-	a.zp-DownloadURL:after {
-		content: ")";
-	}
-	
-	
-	/* In-Text Citations */
-	
-	.zp-ZotpressShortcode.cite .summary,
-	.zp-ZotpressShortcode.bib .summary {
-		display: none;
-	}
-	
-	.zp-InText-Citation.loading {
-		background: transparent url('../images/loading_default.gif') no-repeat center;
-		background-size: contain;
-		display: inline-block;
-		width: 1em;
-		height: 1em;
-		/*line-height: 0;*/
-		/*font-size: 0;*/
-		/*padding: 18px 18px 0 0;*/
-	}
-	
-	
-	
-	/* START OF BROWSE LIB */
-	
-	#zp-Browse-Bar {
-		background-color: #fff;
-		border: 2px solid #000;
-	}
-	#zp-Browse-Bar:before,
-	#zp-Browse-Bar:after {
-		content: "";
-		display: table;
-	}
-	#zp-Browse-Bar:after {
-		clear: both;
-	}
-	
-	#zp-Browse-Collections,
-	#zp-Browse-Tags {
-		float: left;
-		width: 50%;
-	}
-	
-	.zp-Browse-Select {
-		overflow: hidden;
-		width: 100%;
-		height: 34px;
-	}
-	.zp-Browse-Select select {
-		background: transparent;
-		border: none;
-		color: #000;
-		cursor: pointer;
-		font-size: 1em;
-		margin: 0;
-		padding: 0 0.5em;
-		width: 100%;
-		height: 34px;
-	}
-	#zp-Browse-Collections-Select {
-		border-right: 2px solid #000;
-	}
-/*	.zp-List.loading {
-		background: transparent url('../images/loading_default.gif') no-repeat bottom center;
-		padding-bottom: 2em;
-		min-height: 3em;
-	}
-*/
-    /*#zp-Browse-Collections-Select.loading,*/
-	.zp-List-Tags.loading {
-		background: transparent url('../images/loading_default.gif') no-repeat 0.5em center;
-		padding-left: 1.75em;
-	}
-	
-	.zp-Collection-Title {
-		letter-spacing: 0.15em;
-		font-size: 0.9em;
-		font-weight: bold;
-		margin: 3em 0 0 0;
-		padding: 0 0 2em;
-		text-transform: uppercase;
-	}
-	
-	.zp-Entry-Image {
-		float: right;
-		margin: 0 0 1em 1em;
-	}
-	
-	#zp-Zotpress-SearchBox input[type="radio"] {
-		cursor: pointer;
-		margin: 0.5em 0.25em 0.5em 0.5em;
-		vertical-align: middle;
-	}
-	#zp-Zotpress-SearchBox label {
-		cursor: pointer;
-	}
-	#zp-Zotpress-SearchBox .zp-SearchBy {
-		margin-left: 1em;
-	}
-	#zp-Zotpress-SearchBox label,
-	#zp-Zotpress-SearchBox .zp-SearchBy {
-		font-size: 0.5em;
-		letter-spacing: 0.1em;
-		text-transform: uppercase;
-	}
-	
-	.zpSearchLoading {
-		visibility: hidden;
-		display: block;
-		margin: 1em auto;
-	}
-	.zpSearchLoading.show {
-		visibility: visible;
-	}
-	
-	.zpSearchResultsItem:after {
-		clear: both;
-		content: "";
-		display: table;
-	}
-	
-	.zpSearchResultsItem .item_key {
-		display: block;
-		font-weight: bold;
-		margin-bottom: 2em;
-	}
-	
-	.zpSearchResultsItem.hidden {
-		display: none;
-	}
-	
-	#zp-Zotpress-SearchBox-Input {
-		border: none;
-	}
-	
-	#zpSearchResultsPaging {
-		margin: 2em 0;
-	}
-	
-	#zpSearchResultsPaging:before,
-	#zpSearchResultsPaging:after {
-		content: "";
-		display: table;
-	}
-	#zpSearchResultsPaging:after {
-		clear: both;
-	}
-	#zpSearchResultsPaging span.title {
-		display: block;
-		float: left;
-		font-weight: bold;
-		margin: 2px; margin-left: 0;
-		padding: 0.5em 1em 0.5em 0;
-		text-transform: uppercase;
-	}
-	#zpSearchResultsPaging a {
-		border: none;
-		display: block;
-		float: left;
-		margin: 2px;
-		padding: 0.5em 1em;
-		text-decoration: none;
-	}
-	#zpSearchResultsPaging a.selected {
-		border: 2px solid #000;
-		margin: 0;
-	}
-    
-    
-    div.zp-List .zp_display_progress {
-		background: transparent url('../images/loading_default.gif') no-repeat center left;
-        font-size: 0.7em;
-        line-height: 2;
-        padding-left: 3em;
-        text-transform: uppercase;
-    }
-    div.zp-List .csl-left-margin {
-        text-align: left;
-        width: 2.5em !important;
-    }
-    div.zp-List .csl-right-inline {
-        margin-left: 2.75em !important;
-    }
-    
+div.zp-Zotpress {
+    margin: 0 0 1em;
+}
+div.zp-Zotpress div.zp-List.loading {
+    background: transparent url('../images/loading_default.gif') no-repeat center bottom;
+    padding-bottom: 21px;
+    min-height: 2em;
+}
 
-	
-	/* END OF BROWSE LIB */
-	
+/* Thanks to http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+div.zp-Zotpress a {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+   -moz-hyphens: auto;
+    hyphens: auto;
+}
+
+div.zp-Zotpress div.zp-Entry.zp-HasImage {
+    clear: both;
+}
+div.zp-Zotpress div.zp-Entry-Image {
+    float: right;
+}
+
+a.zp-CiteRIS,
+a.zp-DownloadURL {
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+a.zp-CiteRIS:before,
+a.zp-DownloadURL:before {
+    content: "(";
+}
+a.zp-CiteRIS:after,
+a.zp-DownloadURL:after {
+    content: ")";
+}
+
+
+/* In-Text Citations */
+
+.zp-ZotpressShortcode.cite .summary,
+.zp-ZotpressShortcode.bib .summary {
+    display: none;
+}
+
+.zp-InText-Citation.loading {
+    background: transparent url('../images/loading_default.gif') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+}
+
+/* END OF BASIC SHORTCODES */
+
+
+
+/* START OF BROWSE LIB */
+
+#zp-Browse-Bar {
+    background-color: #fff;
+    border: 2px solid #000;
+}
+#zp-Browse-Bar:before,
+#zp-Browse-Bar:after {
+    content: "";
+    display: table;
+}
+#zp-Browse-Bar:after {
+    clear: both;
+}
+
+#zp-Browse-Collections,
+#zp-Browse-Tags {
+    float: left;
+    width: 50%;
+}
+
+.zp-Browse-Select {
+    overflow: hidden;
+    width: 100%;
+    height: 34px;
+}
+.zp-Browse-Select select {
+    background: transparent;
+    border: none;
+    color: #000;
+    cursor: pointer;
+    font-size: 1em;
+    margin: 0;
+    padding: 0 0.5em;
+    width: 100%;
+    height: 34px;
+}
+#zp-Browse-Collections-Select {
+    border-right: 2px solid #000;
+}
+
+.zp-Collection-Title {
+    letter-spacing: 0.15em;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin: 3em 0 0 0;
+    padding: 0 0 2em;
+    text-transform: uppercase;
+}
+
+.zp-Entry-Image {
+    float: right;
+    margin: 0 0 1em 1em;
+}
+
+#zp-Zotpress-SearchBox .zp-SearchBy-Container {
+    border-top: 1px solid #ccc;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0.5em 0;
+}
+#zp-Zotpress-SearchBox .zpSearchFilterContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 0.5em;
+}
+#zp-Zotpress-SearchBox input[type="radio"] {
+    cursor: pointer;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+}
+#zp-Zotpress-SearchBox label {
+    cursor: pointer;
+    margin: 0;
+}
+#zp-Zotpress-SearchBox .zp-SearchBy {
+    margin: 0 1.5em;
+}
+#zp-Zotpress-SearchBox label,
+#zp-Zotpress-SearchBox .zp-SearchBy {
+    font-size: 0.5em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.zpSearchLoading {
+    visibility: hidden;
+    display: block;
+    margin: 1em auto;
+}
+.zpSearchLoading.show {
+    visibility: visible;
+}
+
+.zpSearchResultsItem:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.zpSearchResultsItem .item_key {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 2em;
+}
+
+.zpSearchResultsItem.hidden {
+    display: none;
+}
+
+#zp-Zotpress-SearchBox-Input {
+    border: none;
+}
+
+#zpSearchResultsPaging {
+    margin: 2em 0;
+}
+.zp-List.loading #zpSearchResultsPaging {
+    margin: 0;
+}
+
+#zpSearchResultsPaging:before,
+#zpSearchResultsPaging:after {
+    content: "";
+    display: table;
+}
+#zpSearchResultsPaging:after {
+    clear: both;
+}
+#zpSearchResultsPaging span.title {
+    display: block;
+    float: left;
+    font-weight: bold;
+    margin: 2px; margin-left: 0;
+    padding: 0.5em 1em 0.5em 0;
+    text-transform: uppercase;
+}
+#zpSearchResultsPaging a {
+    border: none;
+    display: block;
+    float: left;
+    margin: 2px;
+    padding: 0.5em 1em;
+    text-decoration: none;
+}
+#zpSearchResultsPaging a.selected {
+    border: 2px solid #000;
+    margin: 0;
+}
+
+
+div.zp-List .zp_display_progress {
+    background: transparent url('../images/loading_default.gif') no-repeat center left;
+    font-size: 0.7em;
+    line-height: 2;
+    padding-left: 3em;
+    text-transform: uppercase;
+}
+div.zp-List .csl-left-margin {
+    text-align: left;
+    width: 2.5em !important;
+}
+div.zp-List .csl-right-inline {
+    margin-left: 2.75em !important;
+}
+
+/* END OF BROWSE LIB */
